src/objects/Charket__WeChatResponse__c.object
<CustomObject>
    <fields>
        <fullName>Charket__CampaignMemberStatus__c</fullName>
        <label>Campaign Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsOverwriteFollowerTag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Follower Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__ReplyMode__c</fullName>
        <label>Reply Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Random</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>Charket__Skill__c</referenceTo>
        <relationshipLabel>WeChat Responses</relationshipLabel>
        <relationshipName>WeChatResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__TotalVolume__c</fullName>
        <label>Total Volume</label>
        <summarizedField>Charket__WeChatResponseKeyword__c.Charket__Volume__c</summarizedField>
        <summaryForeignKey>Charket__WeChatResponseKeyword__c.Charket__WeChatResponse__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charket__UsedFor__c</fullName>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Reply</fullName>
                </value>
                <value>
                    <fullName>Welcome Message</fullName>
                </value>
                <value>
                    <fullName>Default Reply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Responses</relationshipLabel>
        <relationshipName>WeChatResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WhatId__c</fullName>
        <externalId>true</externalId>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>WeChat Response</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>